# RP2040_AS3394

./: #auto_saved_files#  .gitignore  AS3394_PWM.kicad_sch  README.md  RP2040_AS3394.kicad_pcb  RP2040_AS3394.kicad_prl  RP2040_AS3394.kicad_pro  RP2040_AS3394.kicad_sch  fp-info-cache  resistors.py  ~RP2040_AS3394.kicad_sch.lck
Button_Pad/: Button_Matrix.kicad_sch  Button_Matrix_RP2040.kicad_pcb  Button_Matrix_RP2040.kicad_prl  Button_Matrix_RP2040.kicad_pro  Button_Matrix_RP2040.kicad_sch  Button_Pad.kicad_prl  Button_Pad.kicad_pro  Button_Pad.kicad_sch  LED_grid.kicad_sch  fp-info-cache  fp-lib-table
Button_Pad/Footprints/: Adafruit NeoTrellis 4x4.lbr  MICROBUILDER_ELAST_PAD_SQUARE_10MM_4X4WIDE.kicad_mod
Carrier_Board/: Carrier_Board.kicad_prl  Carrier_Board.kicad_pro  Carrier_Board.kicad_sch
Power_Supply/: Power_Supply.kicad_pcb  Power_Supply.kicad_prl  Power_Supply.kicad_pro  Power_Supply.kicad_sch  fp-info-cache
jlcpcb/: project.db
jlcpcb/assembly/: BOM-RP2040_AS3394.csv  (+1 more)
source/: CMakeLists.txt
source/mono_modulation/: ADSR.c  ADSR.h  CMakeLists.txt  LFO.c  LFO.h  test.c
source/pwm_test/: CMakeLists.txt  pwm_test.c
source/usb-midi/: CMakeLists.txt  sine.h  tusb_config.h  usb_descriptors.c  usb_midi.c  usb_midi_boochow.c
spice files/: Draft1.op.raw  Draft1.raw  Draft2.op.raw  Draft2.raw  Filter_Freq.asc  Filter_Freq.op.raw  Filter_Freq.raw  Mixer.asc  Mixer.net  Mixer.op.raw  Mod_Amt.asc  Mod_Amt.raw  Pulse_Width_PWM.asc  VCO.asc  VCO.net  VCO.op.raw  VCO.raw  Wave_Select.asc  Wave_Select.raw  twin_t_test.asc  twin_t_test.op.raw  twin_t_test.raw
(+42 files in other folders)
